feat: guard route by permission

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -49,8 +49,8 @@
                 [class]="navActiveItem === 'spokesperson' ? 'fill-primary' : ''"
               ></icon-people>
               <icon-notes
-                *ngIf="item.routerLink === 'newsindex'"
-                [class]="navActiveItem === 'newsindex' ? 'fill-primary' : ''"
+                *ngIf="item.routerLink === 'news-index'"
+                [class]="navActiveItem === 'news-index' ? 'fill-primary' : ''"
               ></icon-notes>
               <icon-preference
                 *ngIf="item.routerLink === 'preference'"
