--- a/src/app/core/components/highcharts/highcharts.component.html
+++ b/src/app/core/components/highcharts/highcharts.component.html
@@ -1,11 +1,20 @@
 <spinner [spinning]="isLoading">
-  <div #container class="card">
-    <div style="height: 400px" *ngIf="!data"></div>
-    <highcharts-chart
-      *ngIf="data"
-      [Highcharts]="HIGHCHARTS"
-      [options]="data"
-      style="display: block; width: 100%; height: 400px"
-    ></highcharts-chart>
+  <div class="card">
+    <div class="h-25rem" *ngIf="!data"></div>
+
+    <ng-container *ngIf="data">
+      <highcharts-chart
+        *ngIf="commonService.isDarkMode"
+        [Highcharts]="Highcharts"
+        [options]="data"
+        class="block w-full h-25rem"
+      ></highcharts-chart>
+      <highcharts-chart
+        *ngIf="!commonService.isDarkMode"
+        [Highcharts]="Highcharts"
+        [options]="data"
+        class="block w-full h-25rem"
+      ></highcharts-chart>
+    </ng-container>
   </div>
 </spinner>
