--- a/src/app/modules/dashboard/social-media-index/social-media-index.component.html
+++ b/src/app/modules/dashboard/social-media-index/social-media-index.component.html
@@ -5,7 +5,7 @@
 </section> -->
 
 <div class="grid w-full">
-  <div class="col" *ngFor="let item of listCharts">
+  <!-- <div class="col" *ngFor="let item of listCharts">
     <app-highcharts [data]="item.data"></app-highcharts>
-  </div>
+  </div> -->
 </div>
