--- a/src/app/core/components/highcharts/highcharts.component.html
+++ b/src/app/core/components/highcharts/highcharts.component.html
@@ -1,5 +1,5 @@
 <spinner [spinning]="isLoading">
-  <div class="card">
+  <div class="app-card">
     <div class="h-25rem" *ngIf="!data"></div>
 
     <ng-container *ngIf="data">
