--- a/src/styles.scss
+++ b/src/styles.scss
@@ -286,7 +286,7 @@ body.dark {
   }
 }
 
-.card {
+.app-card {
   padding: 8px;
   background-color: var(--card-color);
   border-color: var(--border-color) !important;
