--- a/src/app/modules/dashboard/social-media-index/social-media-index.component.html
+++ b/src/app/modules/dashboard/social-media-index/social-media-index.component.html
@@ -25,7 +25,20 @@
     <div class="flex align-items-center gap-2">
       <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
       <p class="text-sm font-semibold">{{ item.title }}</p>
-      <icon-info></icon-info>
+      <icon-info
+        *ngIf="item.description"
+        [pTooltip]="tooltipContent"
+        [autoHide]="false"
+      >
+        <ng-template #tooltipContent>
+          <span
+            class="text-xs font-light line-height-1"
+            style="color: var(--primary-color-text)"
+          >
+            {{ item.description }}
+          </span>
+        </ng-template>
+      </icon-info>
     </div>
 
     <app-highcharts
