--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -34,7 +34,7 @@
           ></p-button
           ><p-tieredMenu
             #menu
-            [model]="updateToneItems"
+            [model]="listAction"
             [popup]="true"
           ></p-tieredMenu>
         </div>
@@ -226,6 +226,7 @@
           </ng-template>
         </p-table>
         <p-paginator
+          *ngIf="totalRecords"
           (onPageChange)="onPageChange($event)"
           [first]="first"
           [rows]="rows"
@@ -356,3 +357,52 @@
     ></p-button>
   </ng-template>
 </p-dialog>
+
+<p-dialog
+  [(visible)]="showSendMailDialog"
+  [modal]="true"
+  [closeOnEscape]="true"
+  [closable]="true"
+  [dismissableMask]="true"
+  [showHeader]="false"
+  [draggable]="false"
+>
+  <div class="flex flex-column gap-2 py-3 px-2">
+    <p class="py-2">
+      If more than 1 email is to be sent then use a comma (,) to separate the
+      email.
+    </p>
+
+    <label for="email" class="font-semibold text-sm">E-mail</label>
+    <input
+      pInputText
+      id="email"
+      placeholder="Example: abc@mail.com, def@mail.com"
+      [formControl]="sendMailCtrl"
+    />
+  </div>
+  <p-footer>
+    <p-button
+      (click)="showSendMailDialog = false"
+      label="Cancel"
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="sendMail()"
+      pAutoFocus
+      label="Send"
+      [autofocus]="true"
+      [disabled]="!isValidEmail(sendMailCtrl.value)"
+    ></p-button>
+  </p-footer>
+</p-dialog>
+
+<!--
+<p-dialog
+  header="Header"
+  [(visible)]="modalAddOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+</p-dialog> -->
