--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -82,7 +82,7 @@
   </p-breadcrumb>
   <div class="pt-2 pb-4 flex flex-wrap xl:flex-nowrap xl:gap-5">
     <aside
-      *ngIf="showFilter"
+      [hidden]="!showFilter"
       class="w-full md:w-full lg:w-full xl:w-2 xl:min-w-2 mb-4"
       style="min-width: 16.66667%"
     >
