--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -366,7 +366,7 @@
   [dismissableMask]="true"
   [draggable]="false"
 >
-  <p-header> Send to E-mail </p-header>
+  <p-header class="text-base">Send to E-mail</p-header>
   <div class="flex flex-column gap-2">
     <p class="pb-2">
       If more than 1 email is to be sent then use a comma (,) to separate the
