--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.scss
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.scss
@@ -1,5 +1,5 @@
-:host {
-  ::ng-deep .p-tabmenuitem.p-highlight .p-menuitem-link {
+:host ::ng-deep {
+  .p-tabmenuitem.p-highlight .p-menuitem-link {
     border-color: var(--primary-color);
   }
 }
