--- a/src/styles.scss
+++ b/src/styles.scss
@@ -284,6 +284,15 @@ body.dark {
     background-color: var(--card-color);
     border: 1px solid var(--border-color);
   }
+
+  .p-listbox {
+    .p-listbox-item {
+      span {
+        padding-left: 8px;
+        color: var(--card-color) !important;
+      }
+    }
+  }
 }
 
 .app-card {
