--- a/src/app/modules/dashboard/preference/sub-category-list/sub-category-list.component.html
+++ b/src/app/modules/dashboard/preference/sub-category-list/sub-category-list.component.html
@@ -12,12 +12,10 @@
       >
         <div class="flex gap-2 align-items-center">
           <i class="pi pi-plus text-primary"></i>
-          <div class="text-sm" style="color: #464255 !important;">Add SubCategory</div>
+          <div class="text-sm" style="color: #464255 !important">
+            Add SubCategory
+          </div>
         </div>
-      </p-button>
-    </div>
-    <div>
-      <p-button label="Restream" (onClick)="modalRestreamOpen = true">
       </p-button>
     </div>
   </div>
