--- a/src/app/modules/dashboard/social-media-index/social-media-index.component.html
+++ b/src/app/modules/dashboard/social-media-index/social-media-index.component.html
@@ -1,6 +1,15 @@
 <div class="grid w-full">
+  <div class="col-12 flex flex-column gap-4">
+    <div class="mb-3" *ngFor="let item of listCharts.slice(0, 1)">
+      <ng-container
+        *ngIf="!item.data?.isEmpty"
+        [ngTemplateOutlet]="chart"
+        [ngTemplateOutletContext]="{ item }"
+      ></ng-container>
+    </div>
+  </div>
   <div class="col-12 md:col-6 flex flex-column gap-4">
-    <ng-container *ngFor="let item of listCharts; let even = even">
+    <ng-container *ngFor="let item of listCharts.slice(1); let even = even">
       <ng-container
         *ngIf="even && !item.data?.isEmpty"
         [ngTemplateOutlet]="chart"
@@ -10,7 +19,7 @@
   </div>
 
   <div class="col-12 md:col-6 flex flex-column gap-4">
-    <ng-container *ngFor="let item of listCharts; let odd = odd">
+    <ng-container *ngFor="let item of listCharts.slice(1); let odd = odd">
       <ng-container
         *ngIf="odd && !item.data?.isEmpty"
         [ngTemplateOutlet]="chart"
