--- a/src/app/modules/dashboard/social-media-overview/social-media-overview.component.html
+++ b/src/app/modules/dashboard/social-media-overview/social-media-overview.component.html
@@ -1,4 +1,4 @@
-<div class="grid w-full">
+<div class="grid w-full pb-6">
   <div
     class="col-12 md:col-6 flex flex-column gap-4 px-3 py-4"
     *ngFor="let item of listCharts"
