--- a/src/app/modules/dashboard/social-media-index/social-media-index.component.html
+++ b/src/app/modules/dashboard/social-media-index/social-media-index.component.html
@@ -1,4 +1,4 @@
-<div class="grid w-full">
+<div class="grid w-full pb-6">
   <div class="col-12 flex flex-column gap-4">
     <div class="mb-3" *ngFor="let item of listCharts.slice(0, 1)">
       <ng-container
