--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -7,45 +7,61 @@
   </div>
   <p-divider></p-divider>
   <div>
-    <div class="flex justify-content-between align-items-center my-5">
+    <div class="flex justify-content-between align-items-end my-5">
       <div class="text-sm">
         Article Found {{ selectedArticles.length }} / {{ totalRecords }}
       </div>
-      <div class="flex gap-2">
-        <div>
+      <div class="flex align-items-end gap-3">
+        <div class="flex flex-column gap-2">
+          <label class="font-semibold text-sm"> Select by </label>
+          <p-dropdown
+            [formControl]="searchForm.controls['field']"
+            [options]="searchFieldOptions"
+            optionLabel="label"
+            optionValue="value"
+            placeholder="Select..."
+          />
+        </div>
+
+        <div class="flex flex-column gap-2">
+          <label class="font-semibold text-sm"> Search </label>
           <span class="p-input-icon-right">
             <input
               type="text"
               pInputText
               placeholder="Search"
-              class="py-2"
-              [formControl]="searchCtrl"
+              [formControl]="searchForm.controls['query']"
             />
             <i class="pi pi-search"></i>
           </span>
         </div>
-        <div>
-          <p-confirmPopup></p-confirmPopup>
-          <p-button
-            label="Action"
-            icon="pi pi-file-edit"
-            [disabled]="!selectedArticles.length"
-            (click)="menu.toggle($event)"
-          ></p-button
-          ><p-tieredMenu
-            #menu
-            [model]="listAction"
-            [popup]="true"
-          ></p-tieredMenu>
-        </div>
-        <p-confirmPopup></p-confirmPopup>
-        <div>
-          <p-button
-            icon="pi pi-trash"
-            severity="danger"
-            [disabled]="!selectedArticles.length"
-            (click)="deleteArticle($event)"
-          ></p-button>
+
+        <div class="flex gap-2">
+          <div>
+            <p-confirmPopup></p-confirmPopup>
+            <p-button
+              label="Action"
+              icon="pi pi-file-edit"
+              size="large"
+              [disabled]="!selectedArticles.length"
+              (click)="menu.toggle($event)"
+            ></p-button
+            ><p-tieredMenu
+              #menu
+              [model]="listAction"
+              [popup]="true"
+            ></p-tieredMenu>
+          </div>
+          <div>
+            <p-confirmPopup></p-confirmPopup>
+            <p-button
+              icon="pi pi-trash"
+              severity="danger"
+              size="large"
+              [disabled]="!selectedArticles.length"
+              (click)="deleteArticle($event)"
+            ></p-button>
+          </div>
         </div>
       </div>
     </div>
@@ -91,19 +107,23 @@
                       let-value
                       let-filter="filterCallback"
                     >
-                      <p-multiSelect
-                        [options]="toneOptions"
-                        optionLabel="label"
-                        [showHeader]="false"
-                        [(ngModel)]="selectedTones"
-                        placeholder="Select.."
-                      >
-                        <ng-template let-option pTemplate="item">
-                          <div class="inline-block vertical-align-middle">
-                            <span class="ml-1 mt-1">{{ option.label }}</span>
-                          </div>
-                        </ng-template>
-                      </p-multiSelect>
+                      <div class="flex flex-column gap-2">
+                        <label class="font-semibold text-sm"> Tones </label>
+                        <p-multiSelect
+                          [options]="toneOptions"
+                          optionLabel="label"
+                          [showHeader]="false"
+                          [(ngModel)]="selectedTones"
+                          placeholder="Select..."
+                        >
+                          <ng-template let-option pTemplate="item">
+                            <div class="inline-block vertical-align-middle">
+                              <span class="ml-1 mt-1">{{ option.label }}</span>
+                            </div>
+                          </ng-template>
+                        </p-multiSelect>
+                      </div>
+
                       <div class="flex gap-2">
                         <button
                           class="mt-4"
@@ -128,7 +148,7 @@
               <th>
                 <div class="flex align-items-center gap-2">
                   News Title
-                  <i pSortablxxeColumn="title" class="pi pi-angle-down"></i>
+                  <i pSortableColumn="title" class="pi pi-angle-down"></i>
                 </div>
               </th>
               <th style="width: 4rem" class="text-center">
