--- a/src/app/modules/dashboard/preference/category-list/category-list.component.html
+++ b/src/app/modules/dashboard/preference/category-list/category-list.component.html
@@ -13,7 +13,9 @@
       >
         <div class="flex gap-2 align-items-center">
           <i class="pi pi-plus text-primary"></i>
-          <div class="text-sm" style="color: #464255 !important;">Add Category</div>
+          <div class="text-sm" style="color: #464255 !important">
+            Add Category
+          </div>
         </div>
       </p-button>
     </div>
@@ -172,9 +174,6 @@
       [filter]="true"
       [filterInputAutoFocus]="true"
       [metaKeySelection]="false"
-      [virtualScroll]="true"
-      [virtualScrollItemSize]="46"
-      [virtualScrollOptions]="{ scrollHeight: '320px' }"
       [containerStyle]="{ backgroundColor: 'var(--bg-color)' }"
       placeholder="Select"
       appendTo="body"
