--- a/src/app/modules/dashboard/analyze/analyze.component.html
+++ b/src/app/modules/dashboard/analyze/analyze.component.html
@@ -4,9 +4,13 @@
   </div>
   <div class="mb-5">
     <div class="grid">
-      <app-media-sentiment class="col-8"></app-media-sentiment>
-      <app-featured-news class="col-4"></app-featured-news>
+      <div class="col-8">
+        <app-media-sentiment></app-media-sentiment>
+      </div>
+      <div class="col-4">
+        <app-featured-news></app-featured-news>
+      </div>
     </div>
   </div>
-  <app-top-issue></app-top-issue>
+  <div><app-top-issue></app-top-issue></div>
 </section>
