--- a/src/app/core/components/article-list/article-list.component.html
+++ b/src/app/core/components/article-list/article-list.component.html
@@ -1,7 +1,10 @@
 <div class="grid mb-4">
   <div class="col-3 no-underline" *ngFor="let article of articles">
     <div class="mb-1">
-      <a [routerLink]="['/dashboard/articles', article.article_id]" [queryParams]="{search: search}">
+      <a
+        [routerLink]="['/dashboard/articles', article.article_id]"
+        [queryParams]="{ search: search }"
+      >
         <img
           [src]="article.image_url"
           [alt]="article.title"
