--- a/src/app/modules/dashboard/preference/media-list/media-list.component.html
+++ b/src/app/modules/dashboard/preference/media-list/media-list.component.html
@@ -9,8 +9,7 @@
         iconPos="left"
         styleClass="border-0"
         [style]="{ backgroundColor: '#F1F4FA' }"
-        (onClick)="modalAddOpen = true"
-      >
+        (onClick)="resetForm(); showAddModal = true">
         <div class="flex gap-2 align-items-center">
           <i class="pi pi-plus text-primary"></i>
           <div class="text-sm" style="color: #464255 !important">Add Media</div>
@@ -26,38 +25,29 @@
         [rows]="10"
         [totalRecords]="totalRecords"
         [showFirstLastIcon]="false"
-        [loading]="loading"
-        [tableStyle]="{ 'min-width': '50rem' }"
-      >
+        [loading]="isLoading"
+        [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
           <tr class="text-sm font-medium">
             <th class="w-6rem">
               <div class="flex align-items-center gap-2">
                 <span>No</span>
-                <i
-                  pSortableColumn="user_media_type_id"
-                  class="pi pi-angle-down"
-                ></i>
+                <i pSortableColumn="user_media_type_id" class="pi pi-angle-down"></i>
               </div>
             </th>
             <th>
               <div class="flex align-items-center gap-2">
                 Media Name
-                <i
-                  pSortableColumn="user_media_type_name_def  "
-                  class="pi pi-angle-down"
-                ></i>
+                <i pSortableColumn="user_media_type_name_def  " class="pi pi-angle-down"></i>
               </div>
             </th>
             <th style="width: 4rem" class="text-center"><div>Action</div></th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-media let-expanded="expanded">
+        <ng-template pTemplate="body" let-media let-i="rowIndex" let-expanded="expanded">
           <tr class="text-sm">
             <td>
-              <div class="flex align-items-center gap-2">
-                {{ media.idx }}
-              </div>
+              <p>{{ i + 1 }}</p>
             </td>
             <td>
               <div class="flex align-items-center gap-1 w-max">
@@ -68,22 +58,10 @@
             </td>
             <td>
               <div class="flex gap-2">
-                <p-button
-                  [outlined]="true"
-                  [text]="true"
-                  size="small"
-                  styleClass="p-2 border-1 border-200 bg-white"
-                  (onClick)="openEditModal(media)"
-                >
+                <p-button [outlined]="true" [text]="true" size="small" styleClass="p-2 border-1 border-200 bg-white" (onClick)="openEditModal(media)">
                   <icon-pencil class="fill-text-color"></icon-pencil>
                 </p-button>
-                <p-button
-                  [outlined]="true"
-                  [text]="true"
-                  size="small"
-                  styleClass="p-2 border-1 border-200 bg-white"
-                  (onClick)="deleteMedia(media)"
-                >
+                <p-button [outlined]="true" [text]="true" size="small" styleClass="p-2 border-1 border-200 bg-white" (onClick)="deleteMedia(media)">
                   <i class="pi pi-trash text-red-500"></i>
                 </p-button>
               </div>
@@ -97,14 +75,11 @@
         [rows]="rows"
         [totalRecords]="totalRecords"
         [templateLeft]="customLeftTemplate"
-        [showFirstLastIcon]="false"
-      >
+        [showFirstLastIcon]="false">
         <ng-template #customLeftTemplate let-state>
           <span class="text-sm text-color">
             Total Media:
-            <span class="text-sm font-semibold">{{
-              state.totalRecords
-            }}</span></span
+            <span class="text-sm font-semibold">{{ state.totalRecords }}</span></span
           >
         </ng-template>
       </p-paginator>
@@ -112,101 +87,66 @@
   </div>
 </div>
 
-<p-dialog
-  header="Header"
-  [(visible)]="modalAddOpen"
-  [modal]="true"
-  [style]="{ width: '50rem' }"
-  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
->
+<p-dialog header="Header" [(visible)]="showAddModal" [modal]="true" [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
   <ng-template pTemplate="header">
     <div class="inline-flex align-items-center justify-content-center gap-2">
       <span class="font-bold text-md">Create media</span>
     </div>
   </ng-template>
-  <form [formGroup]="createValues" class="flex flex-column gap-4">
+  <form [formGroup]="form" class="flex flex-column gap-4">
     <div class="flex flex-column gap-2">
       <label for="media" class="font-semibold text-sm">Media Name</label>
-      <input
-        pInputText
-        formControlName="media"
-        id="media"
-        placeholder="Media Name"
-      />
+      <input pInputText id="media" placeholder="Media Name" formControlName="user_media_type_name_def" />
     </div>
   </form>
   <ng-template pTemplate="footer">
-    <p-button
-      (click)="modalAddOpen = false"
-      label="Cancel"
-      [outlined]="true"
-    ></p-button>
-    <p-button
-      (click)="createMedia()"
-      label="Submit"
-      pAutoFocus
-      [autofocus]="true"
-      [disabled]="!this.createValues.controls.media.valid"
-    ></p-button>
+    <p-button (click)="showAddModal = false" label="Cancel" [outlined]="true"></p-button>
+    <p-button (click)="createMedia()" label="Submit" pAutoFocus [autofocus]="true" [disabled]="form.invalid"></p-button>
   </ng-template>
 </p-dialog>
 
 <p-dialog
   header="Header"
-  [(visible)]="modalUpdateOpen"
+  [(visible)]="showUpdateModal"
   [modal]="true"
-  [style]="{ width: '50rem' }"
-  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
->
+  [style]="{ width: '50rem', height: 'auto' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
   <ng-template pTemplate="header">
     <div class="inline-flex align-items-center justify-content-center gap-2">
       <span class="font-bold text-md">Detail Media</span>
     </div>
   </ng-template>
-  <form [formGroup]="editedValues" class="flex flex-column gap-4">
+  <form [formGroup]="form" class="flex flex-column gap-4">
     <div class="flex flex-column gap-2">
       <label for="media" class="text-sm">Media Name</label>
-      <input pInputText formControlName="media" id="media" />
+      <input pInputText formControlName="user_media_type_name_def" />
     </div>
   </form>
+
   <div class="mt-4">
     <p-treeSelect
       class="w-full md:w-20rem"
       containerStyleClass="w-full border-200"
-      [(ngModel)]="selectedMediaGroups"
-      [options]="mediaGroupsOptions"
-      [filter]="true"
-      [filterInputAutoFocus]="true"
-      [metaKeySelection]="false"
-      [containerStyle]="{ backgroundColor: 'var(--bg-color)' }"
       placeholder="Select"
       appendTo="body"
       selectionMode="checkbox"
-    ></p-treeSelect>
+      [options]="listMediaGroup"
+      [(ngModel)]="listSelectedMediaGroup"
+      [filter]="true"
+      filterPlaceholder="Search"
+      filterBy="label"
+      [filterInputAutoFocus]="true"
+      [metaKeySelection]="false"
+      [containerStyle]="{ backgroundColor: 'var(--bg-color)' }">
+    </p-treeSelect>
   </div>
   <ng-template pTemplate="footer">
-    <p-button
-      (click)="modalUpdateOpen = false"
-      label="Cancel"
-      pAutoFocus
-      [outlined]="true"
-    ></p-button>
-    <p-button
-      (click)="updateMedia()"
-      label="Save"
-      pAutoFocus
-      [autofocus]="true"
-    ></p-button>
+    <p-button (click)="showUpdateModal = false" label="Cancel" pAutoFocus [outlined]="true"></p-button>
+    <p-button (click)="updateMedia()" label="Save" pAutoFocus [autofocus]="true"></p-button>
   </ng-template>
 </p-dialog>
 
-<p-dialog
-  header="Header"
-  [(visible)]="modalDeleteOpen"
-  [modal]="true"
-  [style]="{ width: '50rem' }"
-  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
->
+<p-dialog header="Header" [(visible)]="showDeleteModal" [modal]="true" [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
   <ng-template pTemplate="header">
     <div class="inline-flex align-items-center justify-content-center gap-2">
       <span class="font-bold text-md">Delete Media</span>
@@ -215,25 +155,10 @@
   <div class="text-center">
     <icon-alert></icon-alert>
     <div class="text-2xl font-semibold mb-2">Are you sure?</div>
-    <div class="text-md">
-      Do you really want to delete this data? <br />this process can't be
-      undone.
-    </div>
+    <div class="text-md">Do you really want to delete this data? <br />this process can't be undone.</div>
   </div>
   <ng-template pTemplate="footer">
-    <p-button
-      (click)="modalDeleteOpen = false"
-      label="Cancel"
-      pAutoFocus
-      [outlined]="true"
-    ></p-button>
-    <p-button
-      (click)="confirmDeleteMedia()"
-      [loading]="isDeleting"
-      label="Delete"
-      severity="danger"
-      pAutoFocus
-      [autofocus]="true"
-    ></p-button>
+    <p-button (click)="showDeleteModal = false" label="Cancel" pAutoFocus [outlined]="true"></p-button>
+    <p-button (click)="confirmDeleteMedia()" [loading]="isLoading" label="Delete" severity="danger" pAutoFocus [autofocus]="true"></p-button>
   </ng-template>
 </p-dialog>
