--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@import "primeng/resources/primeng.css";
-@import "primeicons/primeicons.css";
-@import "./primeng-themes.scss";
-@import "./primeflex-themes.scss";
+@import 'primeng/resources/primeng.css';
+@import 'primeicons/primeicons.css';
+@import './primeng-themes.scss';
+@import './primeflex-themes.scss';
 
 :root {
   --positive-color: #1b81e2;
@@ -169,9 +169,7 @@ body.dark {
     }
   }
 
-  .p-dropdown-panel
-    .p-dropdown-items
-    .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
+  .p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
     background-color: var(--bg-color);
   }
 
@@ -259,12 +257,8 @@ body.dark {
     background-color: var(--card-color);
   }
 
-  .p-multiselect-panel
-    .p-multiselect-items
-    .p-multiselect-item:not(.p-highlight):not(.p-disabled).p-focus,
-  .p-multiselect-panel
-    .p-multiselect-items
-    .p-multiselect-item:not(.p-highlight):not(.p-disabled):hover {
+  .p-multiselect-panel .p-multiselect-items .p-multiselect-item:not(.p-highlight):not(.p-disabled).p-focus,
+  .p-multiselect-panel .p-multiselect-items .p-multiselect-item:not(.p-highlight):not(.p-disabled):hover {
     color: #464255;
     background-color: var(--card-color);
   }
@@ -273,7 +267,8 @@ body.dark {
   }
 
   .p-tree,
-  .p-treeselect-header {
+  .p-treeselect-header,
+  .p-treeselect-panel {
     background-color: var(--bg-color);
     .p-treenode-content {
       background-color: var(--bg-color);
@@ -301,6 +296,21 @@ body.dark {
     }
   }
 
+  .p-multiselect-items-wrapper {
+    height: auto;
+    max-height: 70vh;
+  }
+
+  .p-multiselect-panel .p-multiselect-items .p-multiselect-item-group {
+    background-color: var(--bg-color);
+  }
+
+  .p-multiselect {
+    z-index: 9999 !important;
+    background-color: var(--bg-color) !important;
+    border: 1px solid #424b57 !important;
+  }
+
   .p-multiselect-panel {
     background-color: var(--card-color);
   }
@@ -310,11 +320,11 @@ body.dark {
   }
 
   .p-multiselect .p-multiselect-trigger {
-    background-color: var(--card-color);
+    background-color: var(--bg-color);
   }
 
   .p-multiselect-label-container {
-    background-color: var(--card-color) !important;
+    background-color: var(--bg-color) !important;
   }
 
   .p-multiselect-token-icon {
@@ -345,4 +355,60 @@ body.dark {
   border-color: var(--border-color) !important;
   border-width: 1px !important;
   border-style: solid;
+}
+
+.h-50vh {
+  height: 50vh !important;
+}
+
+.h-55vh {
+  height: 55vh !important;
+}
+
+.h-60vh {
+  height: 60vh !important;
+}
+
+.h-65vh {
+  height: 65vh !important;
+}
+
+.h-70vh {
+  height: 70vh !important;
+}
+
+.h-75vh {
+  height: 75vh !important;
+}
+
+.h-80vh {
+  height: 80vh !important;
+}
+
+.min-h-50vh {
+  min-height: 50vh !important;
+}
+
+.min-h-55vh {
+  min-height: 55vh !important;
+}
+
+.min-h-60vh {
+  min-height: 60vh !important;
+}
+
+.min-h-65vh {
+  min-height: 65vh !important;
+}
+
+.min-h-70vh {
+  min-height: 70vh !important;
+}
+
+.min-h-75vh {
+  min-height: 75vh !important;
+}
+
+.min-h-80vh {
+  min-height: 80vh !important;
 }
