--- a/src/app/core/components/chart-card/chart-card.component.html
+++ b/src/app/core/components/chart-card/chart-card.component.html
@@ -1,28 +1,34 @@
-<p-card
-  styleClass="shadow-none border-1 border-200"
-  [style]="{ backgroundColor: 'var(--card-color)' }"
->
+<p-card styleClass="shadow-none border-1 border-200" [style]="{ backgroundColor: 'var(--card-color)' }">
   <ng-template pTemplate="header">
     <div class="flex justify-content-between align-items-center pt-3 px-3">
       <div class="text-sm font-semibold">{{ title }}</div>
-      <ng-container *ngIf="actionButton && actionButton.type === 'action'">
+
+      <div class="flex justify-content-between align-items-center gap-2">
         <p-button
-          [icon]="'pi ' + actionButton.icon"
-          [outlined]="true"
-          [text]="true"
+          *ngIf="showBack"
+          icon="pi pi-arrow-left"
           severity="secondary"
-          styleClass="bg-white border-1 border-200"
-          (onClick)="actionButton.onClick?.()"
-        ></p-button>
-      </ng-container>
-      <ng-container *ngIf="actionButton && actionButton.type === 'toggle'">
-        <p-toggleButton
-          class="chart-card-custom"
-          [(ngModel)]="actionButton.toggle.value"
-          [onIcon]="'pi ' + actionButton.toggle.onIcon"
-          [offIcon]="'pi ' + actionButton.toggle.offIcon"
-        ></p-toggleButton>
-      </ng-container>
+          styleClass="border-1 border-200"
+          (onClick)="onBack.emit(true)"></p-button>
+
+        <ng-container *ngIf="actionButton">
+          <p-button
+            *ngIf="actionButton.type === 'action'"
+            [icon]="'pi ' + actionButton.icon"
+            [outlined]="true"
+            [text]="true"
+            severity="secondary"
+            styleClass="bg-white border-1 border-200"
+            (onClick)="actionButton.onClick?.()"></p-button>
+
+          <p-toggleButton
+            *ngIf="actionButton.type === 'toggle'"
+            class="chart-card-custom"
+            [(ngModel)]="actionButton.toggle.value"
+            [onIcon]="'pi ' + actionButton.toggle.onIcon"
+            [offIcon]="'pi ' + actionButton.toggle.offIcon"></p-toggleButton
+        ></ng-container>
+      </div>
     </div>
   </ng-template>
   <ng-content></ng-content>
