--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -8,9 +8,7 @@
   <p-divider></p-divider>
   <div>
     <div class="flex justify-content-between align-items-end my-5">
-      <div class="text-sm">
-        Article Found {{ selectedArticles.length }} / {{ totalRecords }}
-      </div>
+      <div class="text-sm">Article Found {{ selectedArticles.length }} / {{ totalRecords }}</div>
       <div class="flex align-items-end gap-3">
         <div class="flex flex-column gap-2">
           <label class="font-semibold text-sm"> Select by </label>
@@ -19,19 +17,13 @@
             [options]="searchFieldOptions"
             optionLabel="label"
             optionValue="value"
-            placeholder="Select..."
-          />
+            placeholder="Select..." />
         </div>
 
         <div class="flex flex-column gap-2">
           <label class="font-semibold text-sm"> Search </label>
           <span class="p-input-icon-right">
-            <input
-              type="text"
-              pInputText
-              placeholder="Search"
-              [formControl]="searchForm.controls['query']"
-            />
+            <input type="text" pInputText placeholder="Search" [formControl]="searchForm.controls['query']" />
             <i class="pi pi-search"></i>
           </span>
         </div>
@@ -44,13 +36,8 @@
               icon="pi pi-file-edit"
               size="large"
               [disabled]="!selectedArticles.length"
-              (click)="menu.toggle($event)"
-            ></p-button
-            ><p-tieredMenu
-              #menu
-              [model]="listAction"
-              [popup]="true"
-            ></p-tieredMenu>
+              (click)="menu.toggle($event)"></p-button
+            ><p-tieredMenu #menu [model]="listAction" [popup]="true"></p-tieredMenu>
           </div>
           <div>
             <p-confirmPopup></p-confirmPopup>
@@ -59,8 +46,7 @@
               severity="danger"
               size="large"
               [disabled]="!selectedArticles.length"
-              (click)="deleteArticle($event)"
-            ></p-button>
+              (click)="deleteArticle($event)"></p-button>
           </div>
         </div>
       </div>
@@ -76,8 +62,7 @@
           [totalRecords]="totalRecords"
           [showFirstLastIcon]="false"
           [loading]="isLoading"
-          [tableStyle]="{ 'min-width': '50rem' }"
-        >
+          [tableStyle]="{ 'min-width': '50rem' }">
           <ng-template pTemplate="header">
             <tr class="text-sm font-medium">
               <th style="width: 8px"></th>
@@ -93,6 +78,7 @@
                   Media Name
                   <i pSortableColumn="media_name" class="pi pi-angle-down"></i>
                   <p-columnFilter
+                    #columnFilter
                     field="tone"
                     matchMode="in"
                     display="menu"
@@ -101,45 +87,29 @@
                     [showAddButton]="false"
                     [showApplyButton]="false"
                     [showClearButton]="false"
-                  >
-                    <ng-template
-                      pTemplate="filter"
-                      let-value
-                      let-filter="filterCallback"
-                    >
-                      <div class="flex flex-column gap-2">
-                        <label class="font-semibold text-sm"> Tones </label>
-                        <p-multiSelect
-                          [options]="toneOptions"
-                          optionLabel="label"
-                          [showHeader]="false"
-                          [(ngModel)]="selectedTones"
-                          placeholder="Select..."
-                        >
-                          <ng-template let-option pTemplate="item">
-                            <div class="inline-block vertical-align-middle">
-                              <span class="ml-1 mt-1">{{ option.label }}</span>
-                            </div>
-                          </ng-template>
-                        </p-multiSelect>
-                      </div>
+                    class="columnFilter">
+                    <ng-template pTemplate="filter" let-value let-filter="filterCallback">
+                      <div class="w-full" style="min-width: 320px">
+                        <div class="flex flex-column gap-2">
+                          <label class="font-semibold text-sm"> Tones </label>
+                          <p-multiSelect
+                            [options]="toneOptions"
+                            optionLabel="label"
+                            [showHeader]="false"
+                            [(ngModel)]="selectedTones"
+                            placeholder="Select...">
+                            <ng-template let-option pTemplate="item">
+                              <div class="inline-block vertical-align-middle">
+                                <span class="ml-1 mt-1">{{ option.label }}</span>
+                              </div>
+                            </ng-template>
+                          </p-multiSelect>
+                        </div>
 
-                      <div class="flex gap-2">
-                        <button
-                          class="mt-4"
-                          pButton
-                          [outlined]="true"
-                          type="button"
-                          label="Clear"
-                          (click)="clear()"
-                        ></button>
-                        <button
-                          class="mt-4"
-                          pButton
-                          type="button"
-                          label="Apply"
-                          (click)="filterCallback()"
-                        ></button>
+                        <div class="flex gap-2">
+                          <button class="mt-4" pButton [outlined]="true" type="button" label="Clear" (click)="clear()"></button>
+                          <button class="mt-4" pButton type="button" label="Apply" (click)="fetchData()"></button>
+                        </div>
                       </div>
                     </ng-template>
                   </p-columnFilter>
@@ -163,12 +133,9 @@
                   [text]="true"
                   size="small"
                   [pRowToggler]="article"
-                  [icon]="
-                    expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'
-                  "
+                  [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
                   styleClass="p-0 px-0  text-color"
-                  [style]="{ width: 'max-content' }"
-                ></p-button>
+                  [style]="{ width: 'max-content' }"></p-button>
               </td>
               <td class="pl-0">
                 <div class="flex align-items-center gap-2">
@@ -178,15 +145,8 @@
               </td>
               <td>
                 <div class="flex align-items-center gap-1 w-max">
-                  <tag
-                    [content]="getToneLabel(article.tone)"
-                    [type]="article.tone ?? 0"
-                  ></tag>
-                  <a
-                    [href]="article.file_pdf"
-                    target="_blank"
-                    class="text-primary"
-                  >
+                  <tag [content]="getToneLabel(article.tone)" [type]="article.tone ?? 0"></tag>
+                  <a [href]="article.file_pdf" target="_blank" class="text-primary">
                     {{ article.media_name }}
                   </a>
                 </div>
@@ -197,8 +157,7 @@
                     *ngIf="article.act_id"
                     class="pi pi-info-circle text-primary"
                     pTooltip="User Change This Article Tone"
-                    tooltipPosition="top"
-                  ></i>
+                    tooltipPosition="top"></i>
                   {{ article.title }}
                 </div>
               </td>
@@ -209,8 +168,7 @@
                     [text]="true"
                     size="small"
                     styleClass="p-2 border-1 border-200 bg-white"
-                    (onClick)="openEditModal(article)"
-                  >
+                    (onClick)="openEditModal(article)">
                     <icon-pencil class="fill-text-color"></icon-pencil>
                   </p-button>
                   <p-button
@@ -218,13 +176,8 @@
                     [text]="true"
                     size="small"
                     styleClass="p-2 border-1 border-200 bg-white"
-                    (onClick)="openPreview(article)"
-                  >
-                    <icon-newspaper
-                      [width]="16"
-                      [height]="16"
-                      class="fill-text-color"
-                    ></icon-newspaper>
+                    (onClick)="openPreview(article)">
+                    <icon-newspaper [width]="16" [height]="16" class="fill-text-color"></icon-newspaper>
                   </p-button>
                 </div>
               </td>
@@ -253,12 +206,10 @@
           [totalRecords]="totalRecords"
           [templateLeft]="customLeftTemplate"
           [showFirstLastIcon]="false"
-          [rowsPerPageOptions]="[10, 20, 50, 100, 500]"
-        >
+          [rowsPerPageOptions]="[10, 20, 50, 100, 500]">
           <ng-template #customLeftTemplate let-state>
             <span class="text-sm text-color"
-              >Showing {{ state.first + 1 }}-{{ state.first + state.rows }} from
-              {{ state.totalRecords }}</span
+              >Showing {{ state.first + 1 }}-{{ state.first + state.rows }} from {{ state.totalRecords }}</span
             >
           </ng-template>
         </p-paginator>
@@ -272,8 +223,7 @@
   [(visible)]="modalUpdateOpen"
   [modal]="true"
   [style]="{ width: '50rem' }"
-  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
->
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
   <ng-template pTemplate="header">
     <div class="inline-flex align-items-center justify-content-center gap-2">
       <span class="font-bold">Edit article</span>
@@ -291,7 +241,7 @@
           <div class="flex justify-content-between">
             <div class="text-xs font-semibold">Date:</div>
             <div class="text-xs">
-              {{ editedArticle.datee ? editedArticle.datee : "" }}
+              {{ editedArticle.datee ? editedArticle.datee : '' }}
             </div>
           </div>
         </div>
@@ -307,7 +257,7 @@
           <div class="flex justify-content-between">
             <div class="text-xs font-semibold">Media:</div>
             <div class="text-xs">
-              {{ editedArticle.media_name ? editedArticle.media_name : "-" }}
+              {{ editedArticle.media_name ? editedArticle.media_name : '-' }}
             </div>
           </div>
         </div>
@@ -322,12 +272,7 @@
         <div class="col-6">
           <div class="flex justify-content-between">
             <div class="text-xs font-semibold">Option:</div>
-            <a
-              class="text-xs"
-              [href]="editedArticle.preview_link"
-              target="_blank"
-              >Preview</a
-            >
+            <a class="text-xs" [href]="editedArticle.preview_link" target="_blank">Preview</a>
           </div>
         </div>
       </div>
@@ -337,20 +282,11 @@
       </div>
       <div class="flex flex-column gap-2">
         <label class="font-semibold" for="summary">Summary</label>
-        <textarea
-          pInputTextarea
-          formControlName="summary"
-          id="summary"
-          class="text-xs"
-          rows="5"
-        ></textarea>
+        <textarea pInputTextarea formControlName="summary" id="summary" class="text-xs" rows="5"></textarea>
       </div>
       <div class="flex flex-column gap-2">
         <label class="font-semibold" for="content">Content</label>
-        <div
-          class="text-xs"
-          [innerHTML]="sanitizedContent ?? editedArticle.content"
-        ></div>
+        <div class="text-xs" [innerHTML]="sanitizedContent ?? editedArticle.content"></div>
       </div>
     </form>
 
@@ -363,18 +299,11 @@
       optionLabel="category_id"
       display="chip"
       appendTo="body"
-      styleClass="text-xs w-full mt-4"
-    ></p-multiSelect>
+      styleClass="text-xs w-full mt-4"></p-multiSelect>
   </ng-container>
 
   <ng-template pTemplate="footer">
-    <p-button
-      (click)="modalUpdateOpen = false"
-      label="Cancel"
-      pAutoFocus
-      [outlined]="true"
-      [loading]="isLoading"
-    ></p-button>
+    <p-button (click)="modalUpdateOpen = false" label="Cancel" pAutoFocus [outlined]="true" [loading]="isLoading"></p-button>
     <p-button
       icon="pi pi-check"
       (click)="updateArticle()"
@@ -382,8 +311,7 @@
       pAutoFocus
       [disabled]="!user?.stat_edit"
       [loading]="isLoading"
-      [autofocus]="true"
-    ></p-button>
+      [autofocus]="true"></p-button>
   </ng-template>
 </p-dialog>
 
@@ -393,36 +321,19 @@
   [closeOnEscape]="true"
   [closable]="true"
   [dismissableMask]="true"
-  [draggable]="false"
->
+  [draggable]="false">
   <p-header class="text-base">Send to E-mail</p-header>
   <div class="flex flex-column gap-2">
     <p class="pb-2">
-      If more than 1 email is to be sent then use a comma (,) to separate the
-      email. <br />
+      If more than 1 email is to be sent then use a comma (,) to separate the email. <br />
       Example: abc&#64;mail.com, def&#64;mail.com
     </p>
 
     <label for="email" class="font-semibold text-sm">E-mail</label>
-    <input
-      pInputText
-      id="email"
-      placeholder="abc@mail.com, def@mail.com"
-      [formControl]="sendMailCtrl"
-    />
+    <input pInputText id="email" placeholder="abc@mail.com, def@mail.com" [formControl]="sendMailCtrl" />
   </div>
   <p-footer>
-    <p-button
-      (click)="showSendMailDialog = false"
-      label="Cancel"
-      [outlined]="true"
-    ></p-button>
-    <p-button
-      (click)="sendMail()"
-      pAutoFocus
-      label="Send"
-      [autofocus]="true"
-      [disabled]="!isValidEmail(sendMailCtrl.value)"
-    ></p-button>
+    <p-button (click)="showSendMailDialog = false" label="Cancel" [outlined]="true"></p-button>
+    <p-button (click)="sendMail()" pAutoFocus label="Send" [autofocus]="true" [disabled]="!isValidEmail(sendMailCtrl.value)"></p-button>
   </p-footer>
 </p-dialog>
